# EVOLVE-MEM

./: .gitignore  README.md  config.py  dynamic_memory.py  evaluation.py  hierarchical_manager.py  llm_backend.py  memory_system.py  pyproject.toml  requirements.txt  run_comprehensive_pipeline.py  self_improvement.py  test_system_performance.py  utils.py
core/: __init__.py  dataset_loader.py  evaluation.py  memory_system.py
evolve_mem_tiers/: __init__.py  dynamic_memory.py  hierarchical_manager.py  self_improvement.py
scripts/: ABLATION_README.md  __init__.py  run_ablation.py  run_comprehensive_pipeline.py
test_suite/: __init__.py  test_system_performance.py
